# leash

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: AGENT_COMPAT.md  FANOTIFY_MNTNS_PLAN.md  IMPLEMENTATION_PLAN.md  LOCKING.md  PRIVILEGE_MODEL.md  PROFILE.md  REVIEW_FOLLOWUP_PLAN.md  REVIEW_ITEM_TRACKER.md  RULES.md  RUNTIME_LAYOUT.md  TAIL.md  TECHNICAL_OVERVIEW.md  TROUBLESHOOTING.md  e2e_semantics.py  e2e_smoke.py  e2e_smoke.sh  locking.md  profile.md
src/: access.rs  access_policy.rs  ancestor_has_cache.rs  cli.rs  cmd_completion.rs  cmd_daemon.rs  cmd_flush.rs  cmd_fuse.rs  cmd_help.rs  cmd_jail.rs  cmd_mount.rs  cmd_profile.rs  cmd_run.rs  cmd_show.rs  cmd_suid.rs  cowfs.rs  daemon_client.rs  fuse_runtime.rs  git_rw_filter.rs  jail.rs  leashfs.rs  main.rs  mirrorfs.rs  mirrorfs_tests.rs  mount_plan.rs  ns_runtime.rs  op.rs  privileges.rs  proc_mounts.rs  process_name.rs  profile.rs  profile_builtin.rs  profile_loader.rs  profile_store.rs  record.rs  run_env.rs  sparse_bitset.rs  tail_ipc.rs  tests.rs  userns_run.rs
src/tests/: flush.rs  mod.rs  runtime.rs
tests/: integration.rs
tests/integration/: test_runtime_semantics.py
