[package]
name = "leash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
fuser = "0.16.0"
fs-err = "3"
globset = "0.4"
libc = "0.2"
pico-args = "0.5"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
twox-hash = "2"
env_logger = { version = "0.11.10", default-features = false }
log = "0.4.29"

[dev-dependencies]
tempfile = "3.27.0"
