[package]
name = "leash"
version = "0.1.0"
edition = "2024"

[[test]]
name = "integration"
harness = false

[dependencies]
anyhow = "1"
arc-swap = "1"
thiserror = "2"
fuser = { path = "vendor/fuser" }
fs-err = "3"
globset = "0.4"
libc = "0.2"
pico-args = "0.5"
env_logger = { version = "0.11.10", default-features = false }
log = "0.4.29"
papaya = "0.2.4"
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = "3.27.0"
memmap2 = "0.9"
